# ResolveAI

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  PROJECT.md  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
admin_ui/: router.py
admin_ui/static/: widget.js
admin_ui/templates/: base.html  conversation_detail.html  conversations.html  kb_manager.html  metrics.html
app/: config.py  main.py
app/agent/: checkpointer.py  graph.py  state.py
app/agent/nodes/: __init__.py  classify_intent.py  compose_response.py  critique.py  escalate.py  execute_tools.py  plan_tools.py  redact_pii.py  retrieve.py  send_reply.py
app/agent/prompts/: classify_intent.yaml  compose_response.yaml  critique.yaml  plan_tools.yaml
app/api/v1/: health.py  inbound.py  router.py
app/core/: db.py  exceptions.py  logging.py  redis.py  security.py
app/models/: __init__.py  audit_log.py  conversation.py  eval_run.py  kb_chunk.py  message.py  semantic_cache.py  user_profile.py
app/observability/: langfuse_client.py  metrics.py  tracing.py
app/schemas/: message.py
app/services/cache/: semantic_cache.py
app/services/channels/: __init__.py  base.py  email.py  web.py  whatsapp.py
app/services/llm/: __init__.py  base.py  groq_provider.py  ollama_provider.py  openai_provider.py  router.py
app/services/mock_crm/: __init__.py  crm_service.py
app/workers/: arq_settings.py  tasks.py
data/eval/: golden_set.jsonl
data/seed/: kb_articles.jsonl  synthetic_tickets.jsonl  user_profiles.jsonl
migrations/: env.py
migrations/versions/: 0001_initial_schema.py  0002_simple_tsvector.py
monitoring/: prometheus.yml
scripts/: add_faq_entries.py  demo_cache.py  generate_synthetic_data.py  ingest_kb.py  kb_coverage_audit.py  reset_db.py  seed_db.py  send_test_messages.py  show_chunks.py
tests/: conftest.py
tests/eval/: llm_judge.py  metrics.py  run_eval.py
tests/integration/: test_agent_graph.py
tests/unit/: test_channels.py  test_chunker.py  test_health.py  test_llm_router.py  test_pii_redactor.py  test_semantic_cache.py  test_tools.py
(+17 files in other folders)
