[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "resolveai"
version = "0.1.0"
description = "Multi-channel AI customer-operations platform with RAG + LangGraph agents"
requires-python = ">=3.11"
dependencies = [
    # API
    "fastapi>=0.115,<0.116",
    "uvicorn[standard]>=0.32,<0.33",
    "python-multipart>=0.0.12",
    # Validation & settings
    "pydantic>=2.9,<3.0",
    "pydantic-settings>=2.6,<3.0",
    # Database
    "asyncpg>=0.30,<0.31",
    "sqlalchemy>=2.0.36,<2.1",
    "alembic>=1.14,<1.15",
    "pgvector>=0.3,<0.4",
    # Cache / queue
    "redis>=5.2,<6.0",
    "arq>=0.26,<0.27",
    # LLM
    "openai>=1.54,<2.0",
    "groq>=0.13,<0.14",
    "httpx>=0.27,<0.28",
    # Agent
    "langgraph>=0.2.50,<0.3.0",
    "langchain-core>=0.3,<0.4",
    # Embeddings & reranker
    "sentence-transformers>=3.3,<4.0",
    # Observability
    "structlog>=24.4,<25.0",
    "langfuse>=2.0,<3.0",
    "prometheus-client>=0.21,<0.22",
    # Retry
    "tenacity>=9.0,<10.0",
    # Template engine (admin UI)
    "jinja2>=3.1,<4.0",
    # Twilio (WhatsApp)
    "twilio>=9.3,<10.0",
    # Utilities
    "python-jose[cryptography]>=3.3,<4.0",
    "passlib[bcrypt]>=1.7,<2.0",
    "aiofiles>=24.1,<25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "httpx>=0.27",
    "ruff>=0.8",
    "black>=24.10",
    "mypy>=1.13",
    "types-aiofiles",
    "types-passlib",
]

[tool.hatch.build.targets.wheel]
packages = ["app", "admin_ui"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["app"]
omit = ["app/__init__.py", "*/migrations/*"]